Alignment fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ table {
   border: #1b262c 3px solid;
   filter: drop-shadow(5px 10px 4px #cccccc);
   border-radius: 5px;
+
 }
 th {
   padding: 2px 5px 2px 5px;
@@ -51,13 +52,22 @@ td {
   border-bottom: #cccccc 1px dotted;
   background-color: #f0f0f0;
 }
-hr {
+.hr {
   border: dotted #1b262c 6px;
   border-bottom: none;
   width: 10%;
   margin: 100px auto;
   filter: drop-shadow(5px 10px 4px #cccccc);
 }
+
+.hrDotted {
+  border: dotted #ccc 1px;
+  border-bottom: none;
+  width: 80%;
+  margin: 5px auto;
+  filter: drop-shadow(5px 10px 4px #cccccc);
+}
+
 
 a {
   color: #448ef6;
@@ -76,12 +86,7 @@ a:hover {
   padding-top: 100px;
 }
 
-.profilePic {
-  border-radius: 2%;
-  border: #ffffff 4px solid;
-  width: 150px;
-  filter: drop-shadow(5px 10px 4px #cccccc);
-}
+
 .middle-container {
   margin: 100px 0;
   background-color: #f0f0f0;
@@ -94,12 +99,12 @@ a:hover {
 
 .skill-row {
   width: 80%;
-  margin: 100px auto 100px auto;
+  margin: 50px auto 50px auto;
   text-align: left;
 }
 .contact-row {
   width: 80%;
-  margin: 100px auto 100px auto;
+  margin: 50px auto 50px auto;
   /* text-align: left; */
 }
 
@@ -113,7 +118,7 @@ a:hover {
 }
 
 .contact-message {
-  width: 80%;
+  width: 100%;
   margin: 40px auto 60px;
 }
 
@@ -144,6 +149,12 @@ a:hover {
   width: 25%;
   float: left;
   margin-right: 30px;
+  filter: drop-shadow(5px 10px 4px #cccccc);
+}
+.profilePic {
+  border-radius: 2%;
+  border: #ffffff 4px solid;
+  width: 150px;
   filter: drop-shadow(5px 10px 4px #cccccc);
 }
 
